--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <thead>
                                 <tr>
                                     <td>order Id</td>
-                                    <td>Item Details</td>
+                                    <td>Item</td>
                                     <td>Quanity</td>
                                     <td>Unit Price</td>
                                     <td>Total</td>
@@ -178,7 +178,7 @@
                             <tbody >
                                 <tr>
                                     <td>1223993</td>
-                                    <td>I phone 13 pro</td>
+                                    <td>I phone13</td>
                                     <td>2</td>
                                     <td>$2344</td>
                                     <td> $2445</td>
@@ -190,7 +190,7 @@
                             <tfoot>
                                 <tr>
                                     <td></td>
-                                    <td>Grand Total</td>
+                                    <td> Total</td>
                                     <td>45</td>
                                     <td>$2344</td>
                                     <td> $2445</td>
@@ -249,9 +249,9 @@
                        <tr>
                         <td>122333</td>
                         <td>12-07-2024</td>
-                        <td>Jomba mazamir</td>
+                        <td>Jomba</td>
                         <td>05674556</td>
-                        <td>4655 kamis</td>
+                        <td>4655kamis</td>
                         <td>47</td>
                         <td>pending</td>
                        </tr>
